5.19 2011-03-12 Gregory Nutt <spudmonkey@racsa.co.cr>

	* Initial version of the apps/ directory was released as contributed by
	  Uros Platise.

6.0 2011-03-21 Gregory Nutt <spudmonkey@racsa.co.cr>

	* README.txt -- README cosmetics
	* hello/ -- hello world minor changes
	* Makefile -- Makefile cosmetics (I am slowly adding the Darjeeling JVM)
	* Make.defs -- New file adds common make definitions for applications.
	* hello/Makefile -- Now uses new Make.defs definitions.  Added README.txt.
	* apps/poweroff -- New application to turn off board power.
	* Moved NSH library, netutils, and examples from the nuttx/ directory to
	  the apps/ directory
	* Moved exec_nuttapp machinery into the nuttapp/ directory.

6.0 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* Creation of auto-generated header files now occurs during the context
	  build phase.