@@ -19,3 +19,4 @@
 
 	* Creation of auto-generated header files now occurs during the context
 	  build phase.
+	* Added sdcard insert and eject, nsh command '?' and some code remarks
